--- a/app/index.html
+++ b/app/index.html
@@ -2,27 +2,88 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Teste do Agente ACP</title>
+  <title>Agente ACP – Conectar Expande!</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; background: #f7f7f7; padding: 40px; }
-    h2 { text-align: center; }
-    #chat-form { text-align: center; margin-bottom: 30px; }
-    #mensagem { width: 60%; padding: 10px; }
-    #resposta, #mensagens { max-width: 700px; margin: 20px auto; background: white; padding: 20px; border: 1px solid #ddd; border-radius: 10px; white-space: pre-wrap; }
+    body {
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(to bottom, #fdfbfb, #ebedee);
+      padding: 40px;
+      margin: 0;
+      color: #333;
+    }
+    .logo {
+      display: block;
+      margin: 0 auto;
+      max-width: 250px;
+    }
+    h2 {
+      text-align: center;
+      color: #7b2cbf;
+      margin-top: 10px;
+    }
+    #chat-form {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    #mensagem {
+      width: 60%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 16px;
+    }
+    button {
+      background: linear-gradient(90deg, #a638ec, #fc6736);
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      margin-left: 10px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    #resetar {
+      background: #7b2cbf;
+      margin-top: 10px;
+    }
+    #mensagens, #resposta {
+      max-width: 800px;
+      margin: 20px auto;
+      background: white;
+      padding: 20px;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      white-space: pre-wrap;
+    }
     .mensagem { margin: 10px 0; }
-    .usuario { font-weight: bold; color: #004aad; }
-    .ia { font-style: italic; }
+    .usuario { font-weight: bold; color: #5e17eb; }
+    .ia { font-style: italic; color: #fc6736; }
+    footer {
+      text-align: center;
+      margin-top: 50px;
+      font-size: 14px;
+      color: #666;
+    }
   </style>
 </head>
 <body>
-  <h2>Conversar com o Agente ACP</h2>
+  <img src="/static/AC_Partners_Gradient.png" alt="AC Partners" class="logo">
+  <h2>Converse com o Agente ACP</h2>
+
   <form id="chat-form">
     <input type="text" id="mensagem" placeholder="Digite aqui" required>
     <button type="submit">Enviar</button>
   </form>
 
+  <button id="resetar" onclick="reiniciarConversa()">🔄 Reiniciar Diagnóstico</button>
+
   <div id="mensagens"></div>
   <pre id="resposta"></pre>
+
+  <footer>
+    © AC Partners – Conectar Expande!
+  </footer>
 
   <script>
     const mensagens = document.getElementById("mensagens");
@@ -37,23 +98,35 @@
       divUser.textContent = "Você: " + mensagem;
       mensagens.appendChild(divUser);
 
-      const response = await fetch("https://acp-agent.onrender.com/chat", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ mensagem })
-      });
+      try {
+        const response = await fetch("/chat", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ mensagem })
+        });
 
-      const data = await response.json();
+        const data = await response.json();
 
-      const divIa = document.createElement("div");
-      divIa.className = "mensagem ia";
-      divIa.textContent = data.pergunta || data.mensagem || JSON.stringify(data);
-      mensagens.appendChild(divIa);
+        const divIa = document.createElement("div");
+        divIa.className = "mensagem ia";
+        divIa.textContent = data.pergunta || data.mensagem || JSON.stringify(data);
+        mensagens.appendChild(divIa);
 
-      respostaArea.textContent = JSON.stringify(data, null, 2);
+        respostaArea.textContent = JSON.stringify(data, null, 2);
+      } catch (error) {
+        alert("Erro ao conectar com o servidor.");
+      }
+
       document.getElementById("mensagem").value = "";
       document.getElementById("mensagem").focus();
     });
+
+    function reiniciarConversa() {
+      mensagens.innerHTML = "";
+      respostaArea.textContent = "";
+      alert("Diagnóstico reiniciado localmente. Recarregue a página para reiniciar no servidor.");
+    }
   </script>
 </body>
 </html>
+
