--- a/app/static/index.html
+++ b/app/static/index.html
@@ -42,11 +42,11 @@
       justify-content: center;
       flex-wrap: wrap;
       gap: 10px;
-      max-width: 90%;
+      max-width: 1100px; /* ajustado */
     }
 
     #mensagem {
-      width: 75%;
+      width: 90%; /* ajustado */
       min-width: 250px;
       padding: 10px;
       border: 1px solid #ccc;
@@ -78,7 +78,7 @@
     #mensagens {
       display: none;
       flex: 1;
-      max-width: 1000px;
+      max-width: 1100px; /* ajustado */
       margin: 0 auto;
       background: white;
       padding: 20px;
@@ -99,7 +99,7 @@
     .ia { font-style: italic; color: #fc6736; }
 
     #finalizacao {
-      max-width: 1000px;
+      max-width: 1100px; /* ajustado */
       margin: 20px auto;
       background: #fff3cd;
       padding: 20px;
@@ -133,7 +133,7 @@
     }
 
     #cidades {
-      max-width: 1000px;
+      max-width: 1100px; /* ajustado */
       margin: 20px auto;
       background: #e3f2fd;
       padding: 20px;
@@ -314,4 +314,3 @@
   </script>
 </body>
 </html>
-
