--- a/app/static/index.html
+++ b/app/static/index.html
@@ -262,7 +262,7 @@
 
           if (partes.length > 1) {
             cidadesDiv.style.display = 'block';
-            cidadesDiv.innerHTML = `<h4>📍 Cidades com Potencial</h4><br>${partes.slice(1).join("<br><br>")}`;
+            cidadesDiv.innerHTML = `<h4>Diagnóstico Programa de Canais de Vendas</h4><br>${partes.slice(1).join("<br><br>")}`;
           }
 
           emailFinal.textContent = finalData?.email || 'seu e-mail';
